--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div>
-                <a href="#" class="nav__logo">Mudit bansal</a>
+                <a href="#" class="nav__logo">Mudit Bansal</a>
             </div>
 
             <div class="nav__menu" id="nav-menu">
