--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="skills__data">
                         <div class="skills__names">
                             <i class='bx bxl-html5 skills__icon'></i>
-                            <span class="skills__name">HTML5</span>
+                            <span class="skills__name">Excel</span>
                         </div>
                         <div class="skills__bar skills__html">
 
@@ -102,7 +102,7 @@
                     <div class="skills__data">
                         <div class="skills__names">
                             <i class='bx bxl-css3 skills__icon'></i>
-                            <span class="skills__name">CSS3</span>
+                            <span class="skills__name">Microsoft Word</span>
                         </div>
                         <div class="skills__bar skills__css">
                             
@@ -186,13 +186,12 @@
 
     <!--===== FOOTER =====-->
     <footer class="footer">
-        <p class="footer__title">Marlon</p>
+        <p class="footer__title">Mudit Bansal</p>
         <div class="footer__social">
             <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
             <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-            <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+            <a href="https://twitter.com/Muditbansal1811" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
         </div>
-        <p class="footer__copy">&#169; Bedimcode. All rigths reserved</p>
     </footer>
 
 
